--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,24 @@
 /*base - formatting*/
 /* #region */
+
+
+@font-face {
+  font-family: roboto;
+  src: url(./Roboto-Regular.ttf);
+}
+
+@font-face {
+  font-family: prompt;
+  src: url(./Prompt-Light.ttf);
+}
+
 * {
-  outline: 1px solid rebeccapurple;
-  background-color: rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
+  font-size: 20px;
+  font-family: 'roboto';
 }
 
 html {
-  height: 100%;
   width: 100%;
   margin: 0;
   padding: 0;
@@ -15,7 +26,6 @@ html {
 
 body {
   width: 100%;
-  height: 100%;
   margin: 0;
 }
 
@@ -29,16 +39,154 @@ one-sec-shadow-host > * {
 }
 /* #endregion*/
 
-/* -content placement- */
+/* -sizing & placement-*/
 /* #region */
-/* #endregion*/
+header{
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
 
-/* -sizing-*/
-/* #region */
+header a{
+  padding: 0.5em;
+  font-family: 'prompt';
+  font-weight: 100;
+  color: black;
+}
+
+nav{
+  display: flex;
+  justify-content: space-around;  
+  align-items: center;
+}
+
+main{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#infoBlock {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#infoBlock img{
+   width: calc(9em + 10vw);
+   height: auto;
+}
+
+#infoBlock h1{
+  width: fit-content;
+}
+
+#centralContent{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1em;
+}
+
+
+#searchBar{
+  width: 100%;
+justify-content: end;
+}
+
+#searchDiv,
+#otherStuffDiv{
+   width: calc(9em + 10vw);
+}
+
+
+#searchForm{
+  max-width: calc(8em + 10vw);
+  display: flex;
+}
+
+#searchForm input{
+  max-width: calc(7em + 10vw);
+  margin: 0;
+  height: 1.5em;
+}
+
+
+
+#contentDiv{
+   width: 100%
+}
+
+@media only screen and (max-width: 600px) {
+  nav{
+    flex-direction: column;
+  }
+
+#searchDiv,
+#otherStuffDiv{
+   width: 90vw;
+}
+
+
+#searchForm{
+  max-width: 90vw;
+  display: flex;
+}
+
+#searchForm input{
+  min-width: calc(90vw - 4em);
+  margin: 0;
+  height: 1.5em;
+}
+}
+
+#searchForm button{
+margin: 0;
+height: 1.5em;
+}
+
+.scrollIdeas a {
+  margin-right: 2rem !important;
+  font-size: 0.8rem;
+  white-space: nowrap;
+}
+
+footer{
+  position: absolute;
+  bottom: 0;
+  height: 2em;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding-right: 2em;
+  align-items: center;
+
+}
+
+img{
+  height: 2em;
+  width: auto;
+}
+
 /* #endregion */
 
 /* -backgrounds- */
 /* #region */
+header{
+  background-color: rgba(0, 0, 0, 0.151);
+}
+
+
+main{
+  background-image: url(./uitzicht3.webp);
+  background-size: cover;
+}
+
+footer{
+  background-color: white;
+}
 /* #endregion */
 
 /*container-relative placements*/
@@ -51,4 +199,111 @@ one-sec-shadow-host > * {
 
 /* -specific formatting- */
 /* #region */
+
+a{
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: underline;
+}
+
+#searchDiv,
+#otherStuffDiv{
+  padding: 1em;
+
+  border: 2px solid rgba(26, 26, 26, 0.507);
+  border-radius: 1em;
+  background-color: rgba(61, 61, 61, 0.6);
+
+  backdrop-filter: blur(5px);
+
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.692);
+}
+
+#contentDiv{
+  display: flex;
+  flex-direction: column;
+    align-items: center;
+
+  overflow: hidden;  /* hide the overflowing parts */
+  white-space: nowrap; /* prevent wrapping, all on one line */
+  max-width: 100%;
+}
+
+#searchForm *{
+  border-radius: 0.6em;
+}
+
+#searchForm input{
+    border-radius: 0.6em;
+  width: 100%;
+  margin: 0;
+  height: 1.5em;
+  border: 1px solid black;
+  border-top-right-radius: 0;
+border-bottom-right-radius: 0;
+border-right: 0;
+}
+
+#searchForm button{
+    border-radius: 0.6em;
+
+margin: 0;
+height: 1.5em;
+border: 1px solid black;
+border-top-left-radius: 0;
+border-bottom-left-radius: 0;
+border-left: 0;
+}
+
+#searchForm button:hover{
+  background-color: rgb(131, 131, 131);
+}
+
+
+.scrollIdeas{
+  padding: 0.2em;
+}
+
+.marquee{
+  display: flex;
+  white-space: nowrap;
+  animation: scrollLeft 300s linear infinite;
+  width: fit-content;
+}
+
+.scrollIdeas a{
+  color: rgb(196, 217, 255);
+}
+
+.rubrieken{
+  margin-top: 1em;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 0em;
+  width: 100%;
+}
+
+.rubrieken *{
+    text-align: center;
+}
+
+.rubrieken select *{
+  font-size: 1rem;
+}
+
+form input::placeholder{
+}
+
+@keyframes scrollLeft {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
 /* #endregion */
