try to remove scrolling on phone

--- a/src/styles.css
+++ b/src/styles.css
@@ -22,11 +22,14 @@ html {
   width: 100%;
   margin: 0;
   padding: 0;
+  overflow-y: hidden;
 }
 
 body {
   width: 100%;
   margin: 0;
+    overflow-y: hidden;
+
 }
 
 one-sec-shadow-host,
